more tweaks to fix layout quirks on smaller screens

--- a/app/styles/layout/elements.scss
+++ b/app/styles/layout/elements.scss
@@ -47,7 +47,10 @@
   }
 
   &--right {
-    width: 50%;
+    @include min-screen($screens-bigger-than-iphone) {
+      width: 50%;
+    }
+
   }
 }
 
